github workflows: changed curl to github-action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,6 @@ name: CI
 
 on: [push]
 
-env:
-  CODECOV_TOKEN: ${{ secrets.CODECOV_IO }}
-
 jobs:
 
 # ----------------------------------------------
@@ -23,6 +20,8 @@ jobs:
     - name: Unit tests
       run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
 
-    - name: Code coverage report
-      run: curl -s https://codecov.io/bash | bash
+    - name: Upload coverage to Codecov  
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_IO }}
 
